SalesforceMetaData/metadata/objects/bofc__BOFCProcessFlowAnalyser__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Last_MDT__c</fullName>
        <label>Last MDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bofc__MasterLabel__c</fullName>
        <label>MasterLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__OName__c</fullName>
        <label>OName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__PDescNew__c</fullName>
        <label>PDescNew</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>bofc__PDesc__c</fullName>
        <label>PDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__PID__c</fullName>
        <label>PID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Plabel__c</fullName>
        <label>Plabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Summary__c</fullName>
        <label>Summary</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>bofc__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__VerActiveNo__c</fullName>
        <label>VerActiveNo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BOFCProcessFlowAnalyser</label>
    <nameField>
        <label>BOFCProcessAnalyser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFCProcessFlowAnalyser</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>